--- a/Lineaires/.vscode/settings.json
+++ b/Lineaires/.vscode/settings.json
@@ -5,6 +5,7 @@
         "string": "c",
         "string_view": "c",
         "ranges": "c",
-        "span": "c"
+        "span": "c",
+        "*.inc": "c"
     }
 }
